yaog haaat sxghohohol

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
             <li><a href="index.html" class="kleur">HOME</a></li>
             <li><a href="tweedePag.html">ADD PLAYER</a></li>
             <li><a href="servlet?task=overview">PLAYER LIST</a></li>
+            <li><a href="find.jsp" >FIND PLAYER</a></li>
         </ul>
     </nav>
     <article>
