--- a/web/tweedePag.html
+++ b/web/tweedePag.html
@@ -16,6 +16,7 @@
             <li><a href="index.html" >HOME</a></li>
             <li><a href="tweedePag.html" class="kleur">ADD PLAYER</a></li>
             <li><a href="servlet?task=overview">PLAYER LIST</a></li>
+            <li><a href="find.jsp" >FIND PLAYER</a></li>
         </ul>
     </nav>
     <article>
